RESOLVED FIXED 283961
[GStreamer][WebRTC] rvfc metadata fixes
https://bugs.webkit.org/show_bug.cgi?id=283961
Summary [GStreamer][WebRTC] rvfc metadata fixes
Philippe Normand
Reported 2024-12-03 02:42:32 PST
.
Attachments
Philippe Normand
Comment 1 2024-12-03 03:51:06 PST
EWS
Comment 2 2024-12-04 00:58:12 PST
Committed 287333@main (74d540d7d086): <https://commits.webkit.org/287333@main> Reviewed commits have been landed. Closing PR #37367 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-04 00:59:13 PST
Note You need to log in before you can comment on or make changes to this bug.