Cherry-pick 287333@main (74d540d7d086). https://bugs.webkit.org/show_bug.cgi?id=283961

[GStreamer][WebRTC] rvfc metadata fixes
    https://bugs.webkit.org/show_bug.cgi?id=283961

    Reviewed by Xabier Rodriguez-Calvar.

    The video capturer pipeline wasn't attaching capture time metadata to the buffers and on the
    receiving side the NTP timestamp was interpreted without taking into account the right time offset
    between 1900/01/01 and 1970/01/01 which is the UNIX epoch. Also on the receiving side there's no
    need to attach the metadata to every RTP packet, but only to the last one corresponding to the frame
    boundary.

    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::videoFrameMetadata):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.cpp:
    (WebCore::GStreamerIncomingTrackProcessor::incomingTrackProcessor):
    (WebCore::GStreamerIncomingTrackProcessor::createParser):
    (WebCore::GStreamerIncomingTrackProcessor::installRtpBufferPadProbe):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.h:
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerVideoCapturer.cpp:
    (WebCore::GStreamerVideoCapturer::setSinkVideoFrameCallback):

    Canonical link: https://commits.webkit.org/287333@main

Canonical link: https://commits.webkit.org/282416.371@webkitglib/2.46